2015-08-28 John Wu <John dot Wu at ACM dot org>
	* examples/ibis.cpp: minor reordering of states that read
	configuration files supplied from the command line

2015-08-23 John Wu <John dot Wu at ACM dot org>
	* src/utilidor.cpp: protect all calls to strcmp to prevent sending
	null pointer to it (strcmp(A, B) > 0 ==> (A != 0 && (B == 0 ||
	strcmp(A, B) > 0)), strcmp(A, B) >= 0 ==> ((A != 0 && (B == 0 ||
	strcmp(A, B) >= 0)) || (A == 0 && B == 0))
	* tests/Makefile.am: adapted changes from Jon Strabala to
	tests/Makefile.in to tests/Makefile.am to address problems with
	more strict sh script syntax under solaris derivatives (works on
	Mac OS X 10.10.5, will ask Jon to try the new Makefile.am)

2015-08-19 John Wu <John dot Wu at ACM dot org>
	* src/ibis.h: update the in-line documentation of
	ibis::index::INDEX_TYPE

2015-06-20 John Wu <John dot Wu at ACM dot org>
	* src/query.cpp, src/qExpr.cpp: fix problem associated with
	estimation of query processing costs, a problem behind the use
	case reported by Petr Velan on 5/7/2015

2015-06-14 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: add timer to all versions of index::activate at
	verboseness level 4

2015-05-08 John Wu <John dot Wu at ACM dot org>
	* examples/thula.cpp: update operator "distinct" to
	"countdistinct"

2015-05-01 John Wu <John dot Wu at ACM dot org>
	* src/util.h: change the read functions of sharedInt32 and
	sharedInt64 to invoke the mutex lock when atomic is not supported
	(per request of Jilong Wang)
	* src/util.h, configure.ac: add conditional macro for std::atomic,
	use std::atomic in sharedInt32 and sharedInt64 when
	HAVE_ATOMIC_TEMPLATE

2015-04-30 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: in function getColumn, the column name of the form
	'__xx' is interpreted as decimal numbers, but the function
	selectClause::fillNames that generated these names are producing
	hexadecimal numbers

2015-03-31 Petr Velan <petr dot velan at cesnet dot cz>